# COC

./: .gitignore  ALL_BUILD.vcxproj.filters  CMakeLists.txt  COC.sln  COC.vcxproj  COC.vcxproj.filters  README.md  diamond_calculation_results.txt  diamond_grid_coordinates.txt  diamond_info_request.txt  id_ed25519  id_ed25519.pub  main.cpp
Classes/: AppDelegate.cpp  AppDelegate.h  ArcherNavigation.cpp  ArcherNavigation.h  ArcherTower.cpp  ArcherTower.h  ArcherTowerNavigation.cpp  ArcherTowerNavigation.h  ArmyCamp.cpp  ArmyCamp.h  AttackerData.cpp  AttackerData.h  AttackerNavigation.cpp  AttackerNavigation.h  AttackerNormalBehavior.cpp  AttackerNormalBehavior.h  BarbarianNavigation.cpp  BarbarianNavigation.h  BaseBehavior.cpp  BaseBehavior.h  BaseUnitData.h  BattleHUD.cpp  BattleHUD.h  BattleManager.cpp  BattleManager.h  BattleResultLayer.cpp  BattleResultLayer.h  BattleSnapshot.h  BattleTestLayer.cpp  BattleTestLayer.h  BattleTestScene.cpp  BattleTestScene.h  BattleTypes.h  BattleUnit.cpp  BattleUnit.h  BomberBehavior.cpp  BomberBehavior.h  BomberBehaviorData.h  BomberNavigation.cpp  BomberNavigation.h  (+73 more)
cocos2d/cmake/Modules/: FindSQLite3.cmake
cocos2d/cocos/: CMakeLists.txt  cocos2d.h
cocos2d/cocos/editor-support/cocostudio/ActionTimeline/: CCFrame.h
cocos2d/cocos/platform/: CCPlatformMacros.h
engine/cocos/core/: ALL_BUILD.vcxproj
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.ios_mac/mac/: Info.plist
proj.win32/: resource.h
server/: CMakeLists.txt  WebSocketServer.cpp
